도넛차트 추가,실시간문의 창 수정 index 하단로고 영역추가 2차 수정

--- a/css/style.css
+++ b/css/style.css
@@ -230,3 +230,11 @@ body {
 .animate-spin {
     animation: spin 1s linear infinite;
 }
+
+/* 모바일 순서 조정 */
+@media (max-width: 1023px) {
+    section > div {
+        display: flex;
+        flex-direction: column;
+    }
+}
